# juniper-from-schema

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
examples/: default_argument_values.rs  enumeration_types.rs  hello_world.rs  input_types.rs  interface.rs  query_trails.rs  union_types.rs
generate-subscription-tests/: Cargo.toml
juniper-from-schema/: Cargo.toml  README.md
juniper-from-schema-build/: Cargo.toml
juniper-from-schema-build-tests/basic/: Cargo.toml  build.rs
juniper-from-schema-build-tests/basic/src/: lib.rs
juniper-from-schema-build-tests/file/: Cargo.toml  build.rs  schema.graphql
juniper-from-schema-build-tests/file/schema/: schema1.graphql  schema2.graphql
juniper-from-schema-build-tests/file/src/: lib.rs
juniper-from-schema-build/src/: lib.rs
juniper-from-schema-code-gen/: Cargo.toml  README.md
juniper-from-schema-code-gen/src/: ast_pass.rs  from_directive.rs  lib.rs  nullable_type.rs  parse_input.rs  pretty_print.rs
juniper-from-schema-code-gen/src/ast_pass/: ast_data_pass.rs  code_gen_pass.rs  directive_parsing.rs  error.rs  is_keyword.rs  mod.rs  schema_visitor.rs  validations.rs
juniper-from-schema-code-gen/src/ast_pass/ast_data_pass/: find_enum_variants.rs  find_interface_implementors.rs
juniper-from-schema-code-gen/src/ast_pass/code_gen_pass/: gen_query_trails.rs  mod.rs  schema_visitor.rs
juniper-from-schema-code-gen/tests/: version-numbers.rs
juniper-from-schema-proc-macro/: Cargo.toml  README.md
juniper-from-schema-proc-macro/src/: lib.rs  parse_input.rs
juniper-from-schema/examples/: async.rs  default_argument_values.rs  enumeration_types.rs  hello_world.rs  input_types.rs  interface.rs  query_trails.rs  subscription.rs  union_types.rs
juniper-from-schema/src/: lib.rs
juniper-from-schema/tests/: converting_query_trails_test.rs  default_argument_values_test.rs  doc_test.rs  end_to_end_test.rs  juniper_master_code_gen.rs  launchpad.rs  query_trail_arguments.rs  query_trail_case.rs  setup.rs  split_mod_test.rs
juniper-from-schema/tests/compile_fail/: docs_on_special_case_scalars.rs  docs_on_special_case_scalars.stderr  enum.stderr  invalid_as_ref_type.rs  invalid_as_ref_type.stderr  invalid_date_time_scalar_directive.rs  invalid_date_time_scalar_directive.stderr  invalid_juniper_directive_definition.rs  invalid_juniper_directive_definition.stderr  invalid_stream_return_type.rs  invalid_stream_return_type.stderr  scalar_with_built_in_name.rs  scalar_with_built_in_name.stderr  snake_cased_fields_on_input_object_types.rs  snake_cased_fields_on_input_object_types.stderr  snake_cased_fields_on_interfaces.rs  snake_cased_fields_on_interfaces.stderr  snake_cased_fields_on_types.rs  snake_cased_fields_on_types.stderr  unknown_directive.rs  unknown_directive.stderr  unsupported_config.rs  unsupported_config.stderr  uppercase_uuid.rs  uppercase_uuid.stderr  wrong_with_ident_value.rs  wrong_with_ident_value.stderr
juniper-from-schema/tests/compile_pass/: async.rs  async_as_ref.rs  async_field_returning_type.rs  async_returning_reference.rs  correct_executor_signature.rs  custom_scalar.rs  customizing_context_name.rs  customizing_the_error_type.rs  dates_and_times.rs  directive_definitions_are_allowed.rs  empty_mutations.rs  enums.rs  field_args.rs  infallible_directive.rs  input_object.rs  input_object_clone.rs  input_objects_have_public_fields.rs  keywords_in_schema.rs  naive_date_time.rs  non_null_list_non_null_items.rs  non_null_list_nullable_items.rs  nullable_list_non_null_items.rs  nullable_list_nullable_items.rs  ownership_attributes.rs  query_trail.rs  query_trail_methods_for_interfaces.rs  query_trail_methods_for_union_types.rs  returning_references.rs  setup.rs  simple_non_null_scalars.rs  simple_nullable_scalars.rs  url.rs  uuid.rs  valid_juniper_directive_definition.rs  with_idents.rs
juniper-from-schema/tests/schemas/: complex_schema.graphql  customizing_context_name.graphql  doc_schema.graphql  doc_test.graphql  ownership_attributes.graphql
juniper-from-schema/tests/subscriptions/: subscription_setup.rs
juniper-from-schema/tests/subscriptions/fail/: stream_item_type_not_in_subscription_field.rs  stream_item_type_not_in_subscription_field.stderr  stream_type_not_in_subscription_field.rs  stream_type_not_in_subscription_field.stderr  subscriptions_cannot_implement_interfaces.rs  subscriptions_cannot_implement_interfaces.stderr
juniper-from-schema/tests/subscriptions/pass/: ownership_owned_infallible_false_async_false_stream_type_UserStream_stream_item_infallible_false.rs  ownership_owned_infallible_false_async_false_stream_type_UserStream_stream_item_infallible_true.rs  ownership_owned_infallible_false_async_false_stream_type_default_stream_item_infallible_false.rs  ownership_owned_infallible_false_async_false_stream_type_default_stream_item_infallible_true.rs  ownership_owned_infallible_false_async_true_stream_type_UserStream_stream_item_infallible_false.rs  ownership_owned_infallible_false_async_true_stream_type_UserStream_stream_item_infallible_true.rs  ownership_owned_infallible_false_async_true_stream_type_default_stream_item_infallible_false.rs  ownership_owned_infallible_false_async_true_stream_type_default_stream_item_infallible_true.rs  ownership_owned_infallible_true_async_false_stream_type_UserStream_stream_item_infallible_false.rs  ownership_owned_infallible_true_async_false_stream_type_UserStream_stream_item_infallible_true.rs  ownership_owned_infallible_true_async_false_stream_type_default_stream_item_infallible_false.rs  ownership_owned_infallible_true_async_false_stream_type_default_stream_item_infallible_true.rs  ownership_owned_infallible_true_async_true_stream_type_UserStream_stream_item_infallible_false.rs  ownership_owned_infallible_true_async_true_stream_type_UserStream_stream_item_infallible_true.rs  ownership_owned_infallible_true_async_true_stream_type_default_stream_item_infallible_false.rs  ownership_owned_infallible_true_async_true_stream_type_default_stream_item_infallible_true.rs
src/: ast_pass.rs  lib.rs  macros.rs  nullable_type.rs  (+3 more)
(+39 files in other folders)
