[package]
version = "0.4.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Internal code generation crate for juniper-from-schema"
documentation = "https://docs.rs/juniper-from-schema-code-gen"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
syn = { version = "1.0.5", features = ["extra-traits"] }
quote = "1.0.2"
graphql-parser = "0.2.2"
proc-macro2 = "1.0.5"
heck = "0.3.0"
rustfmt-nightly = { version = "1.0.1", optional = true }
colored = "1.8.0"

[features]
default = []
format-debug-output = ["rustfmt-nightly"]

[dev_dependencies]
version-sync = "0.8"
juniper = "0.11.0"

[lib]
proc-macro = true
path = "src/lib.rs"
