[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Internal code generation crate for juniper-from-schema"
documentation = "https://docs.rs/juniper-from-schema-proc-macro"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema-proc-macro"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
juniper-from-schema-code-gen = { version = "0.5.2", path = "../juniper-from-schema-code-gen" }
syn = { version = "1", features = ["extra-traits"] }

[dev_dependencies]
version-sync = "0.8"

[lib]
proc-macro = true
path = "src/lib.rs"
