[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Generate Juniper code from you GraphQL schema"
documentation = "https://docs.rs/juniper-from-schema"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
juniper-from-schema-code-gen = { version = "0.5.2", path = "../juniper-from-schema-code-gen" }
juniper = "^0.14"

[dev_dependencies]
serde_json = "1"
assert-json-diff = "0.2"
maplit = "1"
version-sync = "0.8"
trybuild = "1"
rustversion = "0.1"
uuid = { version = "0.7", features = ["v4"] }
url = "2"
chrono = "0.4"
