[package]
version = "0.5.2"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Generate Juniper code from you GraphQL schema"
documentation = "https://docs.rs/juniper-from-schema"
edition = "2018"
homepage = "https://github.com/davidpdrsn/juniper-from-schema"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "juniper-from-schema"
readme = "README.md"
repository = "https://github.com/davidpdrsn/juniper-from-schema.git"

[dependencies]
juniper-from-schema-code-gen = { version = "0.5.2", path = "../juniper-from-schema-code-gen" }
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
futures = "0.3"

[dev_dependencies]
serde_json = "1"
assert-json-diff = "0.2"
maplit = "1"
version-sync = "0.8"
trybuild = "1"
rustversion = "0.1"
uuid = { version = "0.8", features = ["v4"] }
url = "2"
chrono = "0.4"
async-trait = "0.1"
tokio = { version = "0.2", features = ["sync", "stream"] }
