[package]
name = "file"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper-from-schema = { version = "0.5.2", path = "../../juniper-from-schema" }
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }

[build-dependencies]
juniper-from-schema-build = { version = "0.5.2", path = "../../juniper-from-schema-build" }
